@@ -30,6 +30,13 @@
     />
 
   <browser:page
+    for="*"
+    name="migrate_to_one_state_workflow"
+    class="eea.indicators.browser.migration.MigrateToOneStateWorkflow"
+    permission="cmf.ManagePortal"
+    />
+
+  <browser:page
     for="eea.indicators.content.interfaces.IAssessmentPart"
     name="view"
     template="templates/assessmentpart_view.pt"
